Removed padding from the sides of cells, as it was causing larger tables to get mis-aligned. Every sub-tree pushed things off by one pixel. With a deep tree, you end up with lines not meeting nodes. This fixes it.

--- a/example/css/jquery.jOrgChart.css
+++ b/example/css/jquery.jOrgChart.css
@@ -26,7 +26,7 @@
 .jOrgChart td {
   text-align            : center;
   vertical-align        : top;
-  padding               : 0px 2px;
+  padding               : 0;
 }
 
 /* The node */
